--- a/src/components/Weather.module.scss
+++ b/src/components/Weather.module.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 15px;
+  // padding: 0 15px;
 }
 
 /* ========== Left side styles ======== */
