--- a/src/components/Weather.module.scss
+++ b/src/components/Weather.module.scss
@@ -1,10 +1,12 @@
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  // padding: 0 15px;
+.wrapper {
+  background-color: #072b49;
 }
 
-/* ========== Left side styles ======== */
+.container {
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0 15px;  
+}
 
 .weather__wrapper {
   display: flex;
@@ -13,6 +15,9 @@
     display: grid;
   }
 }
+
+/* ========== Left side styles ======== */
+
 
 .left {
   width: 70%;
