--- a/src/components/Weather.module.scss
+++ b/src/components/Weather.module.scss
@@ -1,202 +1,181 @@
 .wrapper {
   background-color: #072b49;
-}
 
-.container {
-  max-width: 1340px;
-  margin: 0 auto;
-  padding: 0 15px;  
-}
-
-.weather__wrapper {
-  display: flex;
-
-  @media (max-width: 900px) {
-    display: grid;
-  }
-}
-
-/* ========== Left side styles ======== */
-
-
-.left {
-  width: 70%;
-  background: #2e518f;
-  padding: 60px 0 145px 60px;
-  display: grid;
-  z-index: 9;
-  position: relative;
-  background-size: cover;
-
-  @media (max-width: 900px) {
-    width: 100%;
-  }
-}
-
-.top__text {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-}
-
-.top {
-  display: flex;
-  align-items: center;
-  gap: 38px;
-}
-
-@media (max-width: 1340px) {
-  .top {
-    display: grid;
-    gap: 10px;
-  }
-}
-
-.temp {
-  font-size: 140px;
-  line-height: 169px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-  display: flex;
-  gap: 4px;
-}
-
-.desc {
-  font-size: 22px;
-  line-height: 27px;
-  letter-spacing: -0.06em;
-  color: #ffffff;
-}
-
-.svg {
-  display: flex;
-  align-items: flex-start;
-  padding-top: 25px;
-}
-
-.day {
-  display: flex;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: -0.06em;
-  color: #ffffff;
-}
-
-.city__name {
-  font-weight: 500;
-  font-size: 62px;
-  line-height: 75px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-}
-
-.time {
-  font-weight: 500;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: -0.06em;
-  color: #ffffff;
-}
-
-/* =========== right styles ========= */
-.right {
-  flex: 1;
-  background-color: #05243e;
-  padding: 20px;
-}
-
-.line {
-  border-bottom: 2px solid #fff;
-  width: 100%;
-  margin: 30px 0;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-input {
-  padding: 15px;
-  font-weight: 500;
-  font-size: 22px;
-  line-height: 27px;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: #05243e;
-}
-
-.lupa {
-  background: #b0cddf;
-  padding: 40px;
-  cursor: pointer;
-  display: inline-block;
-}
-
-.regions__wrapper {
-  display: flex;
-  column-gap: 60px;
-}
-
-.regions__title {
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 27px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-  margin-bottom: 28px;
-  /* padding-left: 60px; */
-}
-
-.regions {
-  display: grid;
-  gap: 10px;
-}
-
-.region {
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-}
-
-.bottom {
-  margin-bottom: 48px;
-}
-
-/* ========== Details styles ========== */
-
-.bottom__title {
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 27px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-  margin-bottom: 28px;
-}
-
-.detail__wrapper {
-  display: grid;
-  row-gap: 20px;
-}
-
-.detail__items {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: -0.04em;
-  color: #ffffff;
-}
-
-@media (max-width: 1000px) {
   .container {
-    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    .weather__wrapper {
+      display: flex;
+
+      @media (max-width: 900px) {
+        display: grid;
+      }
+    }
+
+    /* ========== Left side styles ======== */
+
+    .left {
+      width: 70%;
+      background: #2e518f;
+      padding: 60px 0 145px 60px;
+      display: grid;
+      position: relative;
+      background-size: cover;
+
+      @media (max-width: 900px) {
+        width: 100%;
+      }
+      .top__text {
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        color: #ffffff;
+      }
+      .top {
+        display: flex;
+        align-items: center;
+        gap: 38px;
+
+        @media (max-width: 1340px) {
+          display: grid;
+          gap: 10px;
+        }
+        .temp {
+          font-size: 140px;
+          line-height: 169px;
+          color: #ffffff;
+          display: flex;
+          gap: 4px;
+        }
+
+        .location {
+          .city__name {
+            font-weight: 500;
+            font-size: 62px;
+            line-height: 75px;
+            color: #ffffff;
+
+            .sup {
+              font-size: 24px;
+              margin-left: 20px;
+              display: inline;
+              align-self: self-start;
+            }
+          }
+
+          .time {
+            font-weight: 500;
+            font-size: 26px;
+            line-height: 31px;
+            color: #ffffff;
+          }
+        }
+
+        .description {
+          .desc {
+            font-size: 22px;
+            line-height: 27px;
+            color: #fff;
+          }
+        }
+      }
+    }
+
+    /* =========== right styles ========= */
+    .right {
+      flex: 1;
+      background-color: #05243e;
+      padding: 20px;
+
+      .search {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        input {
+          padding: 15px;
+          font-weight: 500;
+          font-size: 22px;
+          line-height: 27px;
+          background-color: #05243e;
+        }
+
+        .lupa {
+          background: #b0cddf;
+          padding: 40px;
+          cursor: pointer;
+          display: inline-block;
+        }
+      }
+
+      .line {
+        border-bottom: 2px solid #fff;
+        width: 100%;
+        margin: 30px 0;
+      }
+
+      .regions__title {
+        font-weight: 600;
+        font-size: 22px;
+        line-height: 27px;
+        letter-spacing: -0.04em;
+        color: #ffffff;
+        margin-bottom: 28px;
+      }
+
+      .regions__wrapper {
+        display: flex;
+        column-gap: 60px;
+
+        .regions {
+          display: grid;
+          gap: 10px;
+        }
+
+        .region {
+          cursor: pointer;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 24px;
+          letter-spacing: -0.04em;
+          color: #ffffff;
+        }
+      }
+
+      .details {
+        .bottom__title {
+          font-weight: 600;
+          font-size: 22px;
+          line-height: 27px;
+          letter-spacing: -0.04em;
+          color: #ffffff;
+          margin-bottom: 28px;
+        }
+
+        .detail__wrapper {
+          display: grid;
+          row-gap: 20px;
+
+          .detail__items {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 24px;
+            letter-spacing: -0.04em;
+            color: #ffffff;
+          }
+
+          @media (max-width: 1000px) {
+            .container {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
   }
 }
