--- a/src/components/Weather.module.scss
+++ b/src/components/Weather.module.scss
@@ -19,7 +19,7 @@
     .left {
       width: 70%;
       background: #2e518f;
-      padding: 60px 0 145px 60px;
+      padding: 60px 40px 145px 60px;
       display: grid;
       position: relative;
       background-size: cover;
@@ -100,6 +100,7 @@
           font-size: 22px;
           line-height: 27px;
           background-color: #05243e;
+          color: white;
         }
 
         .lupa {
